<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_randomizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#888">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addMatch"
        android:text="@string/addMatch"
        android:layout_marginBottom="28dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw"
        android:id="@+id/text"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/addMatch"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onMyViewClick"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newMatch"
        android:layout_alignBaseline="@+id/addMatch"
        android:layout_alignBottom="@+id/addMatch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/addMatch"
        android:layout_toStartOf="@+id/addMatch"
        android:onClick="onMyViewClick"/>

    <TextView
        android:text="@string/textAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewMatch"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/countWorld"
        android:onClick="onMyViewClick"/>
</RelativeLayout>
